--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
-# 忽略node_modules目录
-# node_modules/
- 
-# 忽略Logs
-#logs
-#*.log
- 
-# 忽略/dist目录，相对.gitignore文件所在目录
-#/dist
- 
-# 忽略.env文件
-#.env
- 
-# 忽略IDE的配置文件
-#.idea/
-#.vscode/
+# Editor directories and files
+.idea
+
+# Package Manager
+node_modules
+.pnpm-debug.log*
+
+# System
+.DS_Store
+
+# Bundle
+dist
+coverage
+packages/element-plus/version.ts
+
+# local env files
+*.local
+.eslintcache
+cypress/screenshots/*
+cypress/videos/*
+tmp
+docs/.vitepress/cache
